Cleaned up code
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/trunk/cdk@6674 eb4e18e3-b210-0410-a6ab-dec725e4b171